samples/_failures_safe/1761474824_51e48c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aae7e1b9.c: In function ‘main’:
./samples/SAFE/__tmp_aae7e1b9.c:161:5: error: expected expression at end of input
  161 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_aae7e1b9.c:161:5: error: expected declaration or statement at end of input
